# artctl

./: .gitignore  AGENTS.md  PRD.md  README.md  ROADMAP.md  TSD.md  pyproject.toml
artctl/: __init__.py  cli.py  output_manager.py  params.py  registry.py  runner.py  templater.py
generators/: night_sky.js  spiral.py
registry/: night_sky.yaml  spiral.yaml
tests/: helpers.py  test_cli.py  test_integration.py  test_output_manager.py  test_params.py  test_registry.py  test_templater.py
